# rust-cot-task-manager

./: .gitignore  Cargo.toml  LICENSE.md  README.md  bacon.toml
config/: dev.toml  prod.toml  prod.toml.example
locales/: en.yml  pt-BR.yml
src/: admin.rs  api.rs  api_auth.rs  api_tasks.rs  auth_extractor.rs  config.rs  cqrs.rs  lib.rs  locale_middleware.rs  main.rs  migrations.rs  models.rs
src/middlewares/: locale_middleware.rs  mod.rs
src/migrations/: m_0001_initial.rs  m_0002_auto_20260416_100801.rs  m_0003_auto_20260416_105849.rs
static/javascript/: task-manager.js
templates/: base.html  index.html
templates/javascript/: config.js.html
