[package]
name = "task-manager-api"
version = "0.1.0"
edition = "2021"

[dependencies]
cot = { version = "0.6.0", features = ["full", "openapi", "swagger-ui"] }
schemars = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
rust-i18n = "3"
tower = "0.5.3"
http = "1.4.0"
